--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -526,7 +526,7 @@ button[type="submit"]:hover {
 
 /* --- Loader Overlay --- */
 #loader-overlay {
-    position: fixed; /* Se queda fijo en la pantalla */
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
@@ -758,9 +758,6 @@ button[type="submit"]:hover {
         flex-direction: column; 
         align-items: center; 
         gap: 1rem;
-    }
-
-    nav ul li a:hover {
     }
 
     main {
