--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -831,3 +831,30 @@ button[type="submit"]:hover {
     background-color: #d32f2f;
     color: #fff;
 }
+
+.whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50%;
+    width: 60px;
+    min-width: 0.005vw;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    z-index: 1000; /* Para que flote sobre todo */
+    transition: transform 0.3s ease;
+}
+
+.whatsapp-float:hover {
+    transform: scale(1.1); 
+}
+
+.whatsapp-float img {
+    width: 35px;
+    height: 35px;
+}
